# adminx

./: .gitignore  CLI.md  Cargo.toml  README.md
src/: actions.rs  error.rs  filters.rs  health.rs  lib.rs  menu.rs  nested.rs  pagination.rs  registry.rs  resource.rs  router.rs
src/configs/: initializer.rs
src/controllers/: auth_controller.rs  dashboard_controller.rs  mod.rs  resource_controller.rs
src/errors/: custom_error.rs  custom_macros.rs  mod.rs
src/helpers/: auth_helper.rs  form_helper.rs  mod.rs  resource_helper.rs  template_helper.rs
src/helpers/downloads/: csv_download.rs  json_download.rs  mod.rs
src/middleware/: mod.rs  role_guard.rs
src/models/: adminx_model.rs  mod.rs
src/schemas/: adminx_schema.rs  mod.rs
src/templates/: edit.html.tera  footer.html.tera  header.html.tera  layout.html.tera  list.html.tera  login.html.tera  new.html.tera  profile.html.tera  stats.html.tera  view.html.tera
src/templates/errors/: 404.html.tera  500.html.tera
src/utils/: auth.rs  constants.rs  database.rs  jwt.rs  mod.rs  rbac.rs  structs.rs
